--- a/src/app/components/empleado/empleado.component.css
+++ b/src/app/components/empleado/empleado.component.css
@@ -1,8 +1,9 @@
-body {
+body, html {
   margin: 0;
   padding: 0;
   background-color: #17a2b8;
   height: 100vh;
+  overflow: auto;
 }
 #login .container #login-row #login-column #login-box {
   margin-top: 120px;
@@ -21,6 +22,6 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
-.h-55 {
-  height: 55% !important;
+.h-60 {
+  height: 60% !important;
 }
